# sapiens2.0

./: .gitignore  README.md  install.ps1  main.py  pyproject.toml  requirements.txt
